WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124545
ARM64 CRASH: Debug builds crash in emitPointerValidation()
https://bugs.webkit.org/show_bug.cgi?id=124545
Summary
ARM64 CRASH: Debug builds crash in emitPointerValidation()
Michael Saboff
Reported
2013-11-18 16:09:23 PST
The function emitPointerValidation() uses push()/pop() in debug builds. These aren't implemented in the ARM64 macro assembler.
Attachments
Patch
(1.45 KB, patch)
2013-11-18 16:25 PST
,
Michael Saboff
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2013-11-18 16:25:06 PST
Created
attachment 217246
[details]
Patch
WebKit Commit Bot
Comment 2
2013-11-18 16:26:56 PST
Attachment 217246
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source/JavaScriptCore/jit/ThunkGenerators.cpp']" exit_code: 1 Source/JavaScriptCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2013-11-18 16:27:45 PST
Comment on
attachment 217246
[details]
Patch
> Source/JavaScriptCore/ChangeLog:10 > + Reviewed by NOBODY (OOPS!). > + > + Changed emitPointerValidation() to use pushToSave() and popToRestore() as > + all macro assemblers have an implementation of these functions. > +
Please fix indentation.
Michael Saboff
Comment 4
2013-11-18 16:29:04 PST
(In reply to
comment #3
)
> (From update of
attachment 217246
[details]
) > > Source/JavaScriptCore/ChangeLog:10 > > + Reviewed by NOBODY (OOPS!). > > + > > + Changed emitPointerValidation() to use pushToSave() and popToRestore() as > > + all macro assemblers have an implementation of these functions. > > + > > Please fix indentation.
Done. Still setting up a new machine.
Michael Saboff
Comment 5
2013-11-18 16:33:01 PST
Committed
r159469
: <
http://trac.webkit.org/changeset/159469
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug