ARM64 CRASH: Debug builds crash in emitPointerValidation() https://bugs.webkit.org/show_bug.cgi?id=124545

Reviewed by Filip Pizlo.

Changed emitPointerValidation() to use pushToSave() and popToRestore() as
all macro assemblers have an implementation of these functions.

* jit/ThunkGenerators.cpp:
(JSC::emitPointerValidation):


Canonical link: https://commits.webkit.org/142734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159469 268f45cc-cd09-0410-ab3c-d52691b4dbfc